kubernetes/wayshub-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      nodeSelector:
        node-role: app
      containers:
      - name: backend
        image: ramdhanifauzi/wayshub-backend:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: apps
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
  type: NodePort
