kubernetes/wayshub-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        node-role: app
      containers:
      - name: frontend
        image: ramdhanifauzi/wayshub-frontend:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: apps
spec:
  selector:
    app: frontend
  ports:
  - port: 3000
    targetPort: 3000
  type: NodePort
